--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "date-fns": "^2.29.3",
+    "geolib": "^3.3.3",
+    "mapbox-gl": "^2.11.1",
     "next": "13.1.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.20",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
