--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
+    "@sanity/client": "^3.2.0",
+    "@sanity/image-url": "^1.0.1",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
     "date-fns": "^2.29.3",
